--- a/CourseManagementSystem/src/main/resources/com/example/coursemanagementsystem/create-account-view.fxml
+++ b/CourseManagementSystem/src/main/resources/com/example/coursemanagementsystem/create-account-view.fxml
@@ -6,12 +6,12 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.coursemanagementsystem.HelloController">
+      fx:controller="com.example.coursemanagementsystem.CMSController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Label fx:id="loginHeader">Login</Label>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label fx:id="createAccountHeader">Create Account</Label>
+    <Label fx:id="createAccountUsername">Username:</Label>
+    <Label fx:id="createAccountPassword">Password:</Label>
 </VBox>
